# OBSAutostarter

./: .gitignore  CMakeLists.txt  README.md  autostarter.lua  buildspec.json
resources/: resources.qrc
src/: autostart.cpp  autostart.hpp  config.cpp  config.hpp  constants.hpp  launch-widget.cpp  launch-widget.hpp  plugin-main.cpp  settings-widget.cpp  settings-widget.hpp
